# HackAssembler-python

./: LICENSE  README.md  setup.cfg  test.sh
src/hack_assembler/: __init__.py  __main__.py  main.py  preprocessor.py  utils.py
src/hack_assembler/assembler/: __init__.py  a_translator.py  assembler.py  c_translator.py  constants.py
src/hack_assembler_zein3.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/assembler/: testa.py  testb.py  testc.py
tests/preprocessor/: test.py  testfile1  testfile3  testfile4  testfile5.cmp  testfull.py
