[metadata]
name = hack_assembler-zein3
version = 0.0.1
author = Ahmad Zein Haddad
author_email = zeinhaddad02@gmail.com
description = A Hack Assembler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zein3/HackAssembler-python/
classifiers =
    License :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
